@@ -1,5 +1,9 @@
 2011-05-02 Jannis Pohlmann <jannis@xfce.org>
 
+	- Update generation of TikZ code for edges a tiny bit.
+
+2011-05-02 Jannis Pohlmann <jannis@xfce.org>
+
 	- Generate edge code so that options and directions are applied properly.
 
 2011-05-02 Jannis Pohlmann <jannis@xfce.org>
